traefikEX/02-traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: docker.io/raulrfs/repositorio-teste:traefikImageTeste2
          args:
            - --api.insecure
            - --providers.kubernetesingress
            - --providers.kubernetescrd.endpoint=https://192.168.49.2:8443
            - --entrypoints.web.address=:80
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
