traefikEX/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: nginx
