traefikEX/ingrressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.local`) && PathPrefix(`/api-teste`)
      kind: Rule
      services:
        - name: whoami
          port: 80
