traefikEX/nginx-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.local`) && PathPrefix(`/api-teste`)
      kind: Rule
      services:
        - name: nginx
          port: 80
